--- a/css/escotometro.css
+++ b/css/escotometro.css
@@ -37,6 +37,15 @@ body{
   padding: 20px 0;
   box-shadow: 0 0 20px rgba(0,0,0, .3);
 }
+.help{
+  font-size: 26px;
+  color: yellow;
+  background-color: rgba(0,0,0,.5);
+  text-align: center;
+  margin: 0 auto;
+  padding: 1em;
+  border-radius: 1.5em;
+}
 .background{
   background-position: 0 0;
   background-size: cover;
@@ -45,7 +54,19 @@ body{
   width: 320px;
   height: auto;
 }
-
+.lat-value{
+  border: 0;
+  border-bottom: 6px solid #fff;
+  padding: .5em;
+  margin: .5em;
+  color: #fff;
+  background: transparent;
+  text-align: center;
+}
+.lat-value:focus{
+  background-color: rgba(0,0,0,.5);
+  border-color: yellow;
+}
 /**
  * Text
  */
