--- a/css/escotometro.css
+++ b/css/escotometro.css
@@ -17,13 +17,19 @@ body{
  * Elements
  */
 .lat-box{
-  padding: 20px;
   margin-bottom: 20px;
   font-size: 20px;
 }
 .site-title{
   padding-top: 22px;
   margin-top: 0;
+  position: relative;
+  z-index: 100;
+}
+.site-title a{
+  color: #fff;
+  text-decoration: none;
+  display: block;
 }
 .dates{
   margin-bottom: 30px;
@@ -44,11 +50,11 @@ body{
 
 .help{
   font-size: 26px;
-  color: yellow;
+  color: #fff;
   background-color: rgba(0,0,0,.5);
   text-align: center;
-  margin: 0 auto;
-  padding: 1em;
+  margin: 0.5em auto;
+  padding: .5em;
   border-radius: 1.5em;
 }
 
@@ -148,6 +154,25 @@ body{
 .nav-button:hover,
 .nav-button a:hover{
   color: #fff;
+}
+
+.map .gllpMap	{ 
+  width: 100%; 
+  height: 450px; 
+  margin-top: 20px;
+}
+.map fieldset {
+  border: 0px solid silver;
+  margin: 0;
+  padding: 0;
+}
+.lat-info{
+  display: none;
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 100%;
 }
 
 /**
